inclui em java minha função segura

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revisão PWI e GitHub</title>
+
+    <script>
+        function minhafuncaosegura(){
+            let h3E1m = window.document.getElementById("subtítulo")
+            console.log(h3E1m);   
+        }
+    </script>
+
 </head>
-<body>
-<h1>Aulas de Revisão PWI e Git / GitHub</h1>
+
+<body onload="minhafuncaosegura();">
+    <h1>Aula Revisão PWI e GitHub</h1>
+    <h3 id="subtítulo">Subtitulo da pagina</h3> 
+
+<script>
+    console.log(minhafuncaosegura);
+</script>
+
 </body>
 </html>
